# irisu-rl

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  RL.md  clone.md  plan.md  pyproject.toml
benchmarks/: README.md  exact_actor_rollout.py  exact_pipeline.py  native_physics.cpp  rl_r1.py  rl_r2a.py  rl_r2b.py  rl_r3a.py  throughput.py
configs/: v2.03-normal.toml
docs/: fidelity.md  mechanics.md  physics-source.md  r4b-broker-protocol.md  rl-evaluation-preregistration-draft.md  rl-r0-r1.md  rl-r2a.md  rl-r2b.md  rl-r3-operations.md  rl-r3a.md  rl-r3b.md  rl-r4a.md  rl-r4b.md  rl-reward-shaping.md
reference/: README.md  binary-analysis.md  computer-use.md  environment.md  game-rules-analysis.md  manifest.md  mechanics-evidence.md  r4b-provider-preflight-20260723.json  score-scale-binary64.tsv  seed-41-adjudication.md  version-history.md
tests/: test_controlled_replay.py  test_env.py  test_exact_actor_rollout.py  test_exact_default_concurrency.py  test_exact_env.py  test_exact_fast_snapshot.py  test_exact_fast_snapshot_api.py  test_exact_getter_trace_comparator.py  test_exact_ipc_protocol.py  test_exact_padded_fast_path.py  test_exact_padded_stress.py  test_exact_replay_corpus_evaluator.py  test_exact_vector_snapshot_concurrency.py  test_exact_wrapper_trace_comparator.py  test_golden_scorer.py  test_host_msvc9_box2d.py  test_host_msvc9_box2d_multiworld.py  test_physics_lifecycle.py  test_policies.py  test_prepare_reference_capture.py  test_r2_checkpoint_resume.py  test_r2_distribution.py  test_r2_manifest_config.py  test_r2_models_ppo.py  test_r2_returns.py  (+47 more)
(+228 files in other folders)
