[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irisu-env"
version = "0.1.0"
description = "Thin Python interface to the separately built deterministic headless IriSu clone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
irisu-r3 = "irisu_rl.r3b_cli:main"

[project.optional-dependencies]
gymnasium = ["gymnasium>=1.0"]
training = [
    "numpy>=2.0",
    "tensorboard==2.20.0",
    "torch==2.13.0",
]

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
